migrated the arrow-engine to SIMDCommand. SIMDCommand is now default engine -Next,try to use LoadFusion to optimize arithmetic ops to beat native arithmetic ops